--- a/index.html
+++ b/index.html
@@ -2412,14 +2412,26 @@ class GPSTracker {
         this.currentTween = null;
         this.markerCoords = { lat: 0, lng: 0 };
 
-        // Configurações
+        // Kalman Filter state
+        this.kalman = {
+            lat: null,
+            lng: null,
+            variance: null // Incerteza estimada
+        };
+        this.kalmanQ = 0.00001; // Ruído do processo (menor = mais suave)
+        this.lastGoodPosition = null;
+        this.consecutiveGoodReadings = 0;
+
+        // Configurações otimizadas para alta precisão
         this.config = {
-            updateThrottle: 500,
-            maxAccuracyThreshold: 50,
-            historySize: 5,
+            updateThrottle: 200,        // Atualizar a cada 200ms (era 500ms)
+            maxAccuracyThreshold: 10,   // Rejeitar leituras > 10m (era 50m)
+            targetAccuracy: 2,          // Meta: 2 metros
+            historySize: 8,             // Histórico maior para suavização
             highAccuracy: true,
-            timeout: 15000,
-            maximumAge: 0
+            timeout: 5000,              // Timeout 5s (era 15s)
+            maximumAge: 0,              // Sempre dados frescos
+            minReadingsForStable: 3     // Leituras boas antes de considerar estável
         };
     }
 
@@ -2505,39 +2517,101 @@ class GPSTracker {
         this.lastUpdate = now;
 
         const accuracy = position.coords.accuracy;
+        const lat = position.coords.latitude;
+        const lng = position.coords.longitude;
 
-        // Filtro: Rejeitar leituras imprecisas
+        // Filtro rigoroso: Rejeitar leituras imprecisas (> 10m)
         if (accuracy > this.config.maxAccuracyThreshold) {
-            console.warn(`GPS impreciso (${Math.round(accuracy)}m), ignorando...`);
+            console.warn(`⚠️ GPS impreciso (${Math.round(accuracy)}m > ${this.config.maxAccuracyThreshold}m), ignorando...`);
+            this.consecutiveGoodReadings = 0;
             return;
         }
 
+        // Aplicar Filtro de Kalman para suavização
+        const filteredPos = this.applyKalmanFilter(lat, lng, accuracy);
+
+        // Verificar se é uma leitura boa (≤ 2m)
+        if (accuracy <= this.config.targetAccuracy) {
+            this.consecutiveGoodReadings++;
+            if (this.consecutiveGoodReadings >= this.config.minReadingsForStable) {
+                // Posição estável com alta precisão - usar diretamente
+                this.lastGoodPosition = { lat, lng, accuracy };
+                console.log(`✅ GPS estável: ${accuracy.toFixed(1)}m`);
+            }
+        } else {
+            this.consecutiveGoodReadings = Math.max(0, this.consecutiveGoodReadings - 1);
+        }
+
+        // Adicionar ao histórico (apenas leituras boas)
         const rawPos = {
-            lat: position.coords.latitude,
-            lng: position.coords.longitude,
+            lat: filteredPos.lat,
+            lng: filteredPos.lng,
             accuracy: accuracy,
             timestamp: now
         };
 
-        // Adicionar ao histórico
         this.positionHistory.push(rawPos);
         if (this.positionHistory.length > this.config.historySize) {
             this.positionHistory.shift();
         }
 
-        // Calcular posição suavizada
-        const smoothedPos = this.calculateSmoothedPosition();
-
-        if (smoothedPos && this.marker) {
-            this.animateMarkerTo(smoothedPos);
+        // Usar posição filtrada pelo Kalman
+        if (this.marker) {
+            // Animação mais rápida para precisão alta
+            const animDuration = accuracy <= this.config.targetAccuracy ? 150 : 400;
+            this.animateMarkerTo(filteredPos, animDuration);
             this.accuracy = accuracy;
-            locationAccuracy = accuracy; // Atualizar global
-            updateStatus(`Precisão: ${Math.round(accuracy)}m`, true);
+            locationAccuracy = accuracy;
+
+            // Indicador visual de qualidade do sinal
+            const qualityIcon = accuracy <= 2 ? '🎯' : accuracy <= 5 ? '📍' : '📡';
+            updateStatus(`${qualityIcon} Precisão: ${accuracy.toFixed(1)}m`, true);
         }
+    }
+
+    // Filtro de Kalman 1D aplicado a lat/lng
+    applyKalmanFilter(lat, lng, accuracy) {
+        // Variância da medição (baseada na precisão GPS)
+        const measurementVariance = accuracy * accuracy;
+
+        // Primeira medição - inicializar
+        if (this.kalman.lat === null) {
+            this.kalman.lat = lat;
+            this.kalman.lng = lng;
+            this.kalman.variance = measurementVariance;
+            return { lat, lng };
+        }
+
+        // Predição: aumentar incerteza com o tempo
+        this.kalman.variance += this.kalmanQ;
+
+        // Ganho de Kalman: quanto confiar na nova medição
+        const kalmanGain = this.kalman.variance / (this.kalman.variance + measurementVariance);
+
+        // Atualização: combinar predição com medição
+        this.kalman.lat = this.kalman.lat + kalmanGain * (lat - this.kalman.lat);
+        this.kalman.lng = this.kalman.lng + kalmanGain * (lng - this.kalman.lng);
+
+        // Atualizar variância
+        this.kalman.variance = (1 - kalmanGain) * this.kalman.variance;
+
+        return {
+            lat: this.kalman.lat,
+            lng: this.kalman.lng
+        };
     }
 
     calculateSmoothedPosition() {
         if (this.positionHistory.length === 0) return null;
+
+        // Se temos uma posição estável recente, usar ela
+        if (this.lastGoodPosition && this.consecutiveGoodReadings >= this.config.minReadingsForStable) {
+            return {
+                lat: this.lastGoodPosition.lat,
+                lng: this.lastGoodPosition.lng
+            };
+        }
+
         if (this.positionHistory.length === 1) {
             return {
                 lat: this.positionHistory[0].lat,
@@ -2545,12 +2619,17 @@ class GPSTracker {
             };
         }
 
+        // Média ponderada com peso exponencial (leituras recentes valem mais)
         let totalWeight = 0;
         let weightedLat = 0;
         let weightedLng = 0;
 
-        this.positionHistory.forEach(pos => {
-            const weight = 1 / (pos.accuracy + 1);
+        this.positionHistory.forEach((pos, index) => {
+            // Peso baseado na precisão E na recência
+            const recencyWeight = Math.pow(1.5, index); // Mais recente = maior peso
+            const accuracyWeight = 1 / (pos.accuracy + 1);
+            const weight = recencyWeight * accuracyWeight;
+
             weightedLat += pos.lat * weight;
             weightedLng += pos.lng * weight;
             totalWeight += weight;
